# simd_orbits

./: .gitignore  Cargo.toml  belts.toml  flake.nix  index.html  out.toml  planets.toml
assets/: planet.glb
benches/: my_benchmark.rs
bev/: Cargo.toml
bev/assets/: 2k_sun.xcf  saturn_rings.glb
bev/src/: controls.rs  main.rs  paths.rs  rendering_prep.rs  setup.rs  ui.rs
bevy_mod_orbits/: CHANGELOG.md  Cargo.toml  README.md
bevy_mod_orbits/examples/: basic.rs  parameters.rs  transfer.rs
bevy_mod_orbits/examples/utils/: dejitter_orbit.rs  draw_ellipse.rs  mod.rs
bevy_mod_orbits/src/: lib.rs  math.rs  orbit.rs  plugin.rs  transfer.rs
examples/: bev.rs
src/: lib.rs  main.rs  orbit_math.rs  simd_orbits.rs
