[package]
name = "bevy_mod_orbits"
version = "0.1.0"
edition = "2021"
categories = ["game-development"]
description = "A bevy plugin for creating stable orbits, and calculating transfers between them"
keywords = ["bevy", "orbit", "orbital-mechanics"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/atbentley/bevy_mod_orbits"

[dependencies]
bevy = { version = "0.9", default-features = false }
serde = { version = "1.0.166", features = ["derive"] }
toml = { version = "0.7.5", features = ["display"] }

[dev-dependencies]
bevy = "0.9"
bevy_polyline = "0.4"
bevy_egui = "0.18.0"
format_num = "0.1.0"
